--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -55,7 +55,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/  # URL del servidor Eureka
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}  # URL del servidor Eureka
 
 springdoc:
   swagger-ui:
