--- a/chatbot-service/src/main/resources/application.yml
+++ b/chatbot-service/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: chatbot-service  # Nombre del microservicio
   datasource:
-    url: jdbc:postgresql://localhost:5433/brightmind  # URL de la base de datos
-    username: postgres                                # Usuario de la base de datos
-    password: root                                    # Contraseña de la base de datos (la que estás usando en pgAdmin)
+    url: jdbc:postgresql://${DB_HOSTNAME:localhost}:${PORT:5433}/brightmind  # URL de la base de datos
+    username: ${DB_USERNAME:root}                 # Usuario de la base de datos
+    password: ${DB_PASSWORD:root}                # Contraseña de la base de datos (la que estás usando en pgAdmin)
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -17,10 +17,10 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/  # URL del servidor Eureka
+      defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}  # URL del servidor Eureka
   instance:
     prefer-ip-address: true
-    hostname: localhost  # Asegúrate de que esto sea correcto si usas localhost
+    hostname: ${APP_HOSTNAME:localhost}  # Asegúrate de que esto sea correcto si usas localhost
     non-secure-port: 8083  # Este es el puerto que debería usar Eureka para acceder al servicio
 
 server:
