--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -56,6 +56,8 @@ eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_URL:http://localhost:8761/eureka/}  # URL del servidor Eureka
+  instance:
+    non-secure-port: 8080  # Este es el puerto que debería usar Eureka para acceder al servicio
 
 springdoc:
   swagger-ui:
